# aw-notion

./: .gitignore  CLAUDE.md  README.md  aw-notion.service  aw-notion.timer  com.aw-notion.sync.plist  com.aw-watcher-window.keepalive.plist  com.timetrack.sync.plist  config.toml.example  install.sh  pyproject.toml
aw_notion/: activitywatch.py  blocks.py  cli.py  config.py  git_context.py  notion.py  state.py
scripts/: purge_excluded.py
tests/: test_activitywatch.py  test_blocks.py  test_cli.py  test_config.py  test_git_context.py  test_notion.py  test_state.py
timetrack/: activitywatch.py  cli.py  config.py  notion.py  state.py
